# 8bit-programmer

./: .gitmodules  AudioBuffer.cpp  AudioBuffer.h  CMakeLists.txt  CPU.cpp  CPU.h  CodeTextEdit.cpp  CodeTextEdit.h  Editor.cpp  Editor.h  MiniAudio_impl.cpp  Modem.cpp  Modem.h  README.md  cpu-extended.txt  cpu-original.txt  data.qrc  main.cpp
.github/workflows/: build_cmake.yml
arduino/: main.c
